fixed: slideout-model title alignment

--- a/artdefine/src/App.scss
+++ b/artdefine/src/App.scss
@@ -2222,6 +2222,9 @@ button {
     i {
       font-size: 28px;
     }
+    .title{
+      margin: 0;
+    }
   }
 }
 
